--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,700;1,300&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
+body {
+    font-family: 'Work Sans', sans-serif;
+    overflow-x: hidden;
 }
+
+ol, ul {
+    list-style: none;
+}
+
+/* .alert-container {} */
+
+.callout-container {
+    height: 100vh;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+
+}
+
+.opacity-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* .features-container {}
+
+.testimonials-container {} */
+
+/* Block dividers */
