--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,37 @@ ol, ul {
     width: 35px;
 }
 
+/* Navbar */
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border: 0;
+    border-bottom: 1px solid #ffffff28;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .25);
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar-brand {
+    font-weight: bold;
+}
+
+.navbar .navbar-nav a {
+    font-weight: bold;
+}
+
 /* Jumbotron */
 
 .jumbotron {
