--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,18 @@ ol, ul {
     list-style: none;
 }
 
-/* .alert-container {} */
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 5px 15px;
+    background-color: #eec802;
+    border-color: #eec802;
+}
 
 .callout-container {
     height: 100vh;
@@ -90,6 +101,7 @@ ol, ul {
 
 .jumbotron {
     background-color: transparent;
+    margin-top: 80px;
 }
 
 .jumbotron-header {
