--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,11 +51,24 @@ ol, ul {
 
 .testimonials-container {} */
 
+/* Page headers */
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
 /* Block dividers */
 .block-divider {
     width: 75px;
     height: 5px;
     border: 0;
+    background-color: #444;
 }
 
 .block-divider__orange {
@@ -64,6 +77,13 @@ ol, ul {
 
 .block-divider__short {
     width: 35px;
+}
+
+/* Content Containers */
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 /* Navbar */
@@ -101,7 +121,7 @@ ol, ul {
 
 .jumbotron {
     background-color: transparent;
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
 .jumbotron-header {
