Add a new feature: pub crawl.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,3 +172,8 @@ ol, ul {
     background-color: #cb980f;
     border-color: #cb980f;
 }
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
