Fix callout image path.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,8 @@ ol, ul {
 
 .callout-container {
     height: 100vh;
+    
+    background: url("../images/hero-image.jpg") no-repeat center center fixed;
 
     -webkit-background-size: cover;
     -moz-background-size: cover;
